HtmlUi: Fix iframe download in Safari
Apparently, the <iframe> may not be "display: none", but invisible seems
to work. The symptom of "not working" is a download that is cancelled
immediately.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Desktop.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/Desktop.css
@@ -465,12 +465,13 @@
 /* "Open URI" related rules */
 
 .download-frame {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 0;
   height: 0;
-  display: none;
+  visibility: hidden;
+  /* Do _not_ use 'display: none', because that seems to interrupt the download in Safari */
 }
 
 .popup-blocked-title {
